# pdf-extraxtext-project

./: .env.example  DockerFile  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.postman/: resources.yaml
Documents/Diagram/: PaperSoul - Diagrama de Clases.puml  PaperSoul - Diagrama de Secuencia.puml
Documents/Info/Postman documents/: PaperSoul.postman_collection (1).json
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: pdf.py
app/core/: config.py
app/db/: database.py
app/models/: pdf_document.py
app/repositories/: pdf_repository.py
app/schemas/: health.py  pdf.py
app/services/: hashing_service.py  pdf_extraction_service.py  pdf_validator.py
app/tests/: conftest.py  test_fixtures_smoke.py
app/tests/api/: test_health.py
app/tests/api/v1/endpoints/: test_pdf_endpoints.py
app/tests/repositories/: test_pdf_repository.py
app/tests/services/: pdf_validation_test.py  test_create_user.py  test_delete_user.py  test_hashing_service.py  test_hashing_service_integration.py  test_pdf_extraction_service.py  test_pdf_validation.py  test_user_service.py
