[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PaperSoul"
version = "1.0.0"
description = "API con arquitectura de tres capas y Clean Code usando MongoDB"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Lautaro Allolio", email = "46546353@alumnos.frsr.utn.edu.ar"},
    {name = "Lucas Gimenez", email = "46397633@alumnos.frsr.utn.edu.ar"},
    {name = "Valentino Pasetti", email = "45875426@alumnos.frsr.utn.edu.ar"}
]
keywords = ["fastapi", "clean-architecture", "api", "async", "mongodb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

dependencies = [
    # FastAPI y servidor
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    # Base de datos MongoDB
    "motor>=3.7.1",
    "beanie==1.29.0",
    "pymongo>=4.17.0",
    # Configuración y validación
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    # Procesamiento de PDFs y OCR
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "Pillow>=12.2.0",
    # Upload de archivos
    "python-multipart>=0.0.27",
    # Testing
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "mongomock-motor>=0.0.36",

    # Type checking
    "mypy>=1.20.2",

    # Linting
    "ruff>=0.15.12",
]

[project.scripts]
start = "app.main:start"

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "mongomock-motor>=0.0.36",
    "mypy>=1.20.2",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "motor.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pymupdf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytesseract.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "beanie.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["app"]

